# WaferMaster

./: .gitignore  README.md  WaferMaster_Cline_Implementation_Guide.md
WaferMaster/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
WaferMaster/include/: Common.h  CommunicationManager.h  FrameProducer.h  Logger.h  MainWindow.h  ResultLogger.h  RoiViewerDialog.h  WaferAlgorithm.h
WaferMaster/src/: Common.cpp  CommunicationManager.cpp  FrameProducer.cpp  Logger.cpp  MainWindow.cpp  ResultLogger.cpp  RoiViewerDialog.cpp  WaferAlgorithm.cpp  main.cpp
WaferMaster/ui/: WaferMaster.ui
